# SD4OD

./: .gitignore  README.md  ROADMAP.md  pyproject.toml
configs/: diffusers_local.yaml  test_inpainting.yaml
examples/: active_learning_example.ipynb  demo.ipynb  demo_pipeline.ipynb  demo_viz.py  precompute_demo_data.py
examples/demo_data/: active_learning.json  after_stats.pkl  dataset_stats.pkl  pipeline_summary.json  profile_after.json  profile_before.json  synthesis_strategy.pkl  training_metrics.json
synthdet/: __init__.py  config.py  types.py
synthdet/acquire/: base.py  filter.py  web_scraper.py
synthdet/analysis/: __main__.py  diversity.py  loader.py  statistics.py  strategy.py
tests/: conftest.py  test_activation_capture.py  test_active_learning_loop.py  test_analysis_cli.py  test_augmenter.py  test_bbox_utils.py  test_compositor.py  test_config.py  test_control_chart.py  test_copy_paste.py  test_dataset_validator.py  test_diffusers_provider.py  test_diversity.py  test_embeddings.py  test_evaluator.py  test_generate_cli.py  test_generative_compositor.py  test_grounding_dino.py  test_image_utils.py  test_imagen_generate_provider.py  test_imagen_modifier_provider.py  test_imagen_provider.py  test_inpainting.py  test_loader.py  test_modify_annotate.py  test_orchestrator.py  test_owlvit.py  test_pipeline_cli.py  test_pipeline_config.py  test_placement.py  test_quality_monitor.py  test_rate_limiter.py  test_relevance_filter.py  test_sam_refiner.py  test_statistics.py  test_strategy.py  test_trainer.py  test_types.py  test_verifier.py  test_web_scraper.py  (+1 more)
(+43 files in other folders)
